--- a/app/assets/stylesheets/active_admin.scss
+++ b/app/assets/stylesheets/active_admin.scss
@@ -17,18 +17,36 @@
 //   .status_tag { background: #6090DB; }
 
 .meta-image {
-    width: 200px;
+  width: 200px;
 }
 
 .meta-image-detail {
-    width: 50%;
+  width: 50%;
 }
 
 .components {
-    list-style: none;
-    padding: 0;
+  list-style: none;
+  padding: 0;
 }
 
 p {
-    margin: 0;
+  margin: 0;
+}
+
+a.tag {
+  text-decoration: none;
+  background-color: #6a7176;
+  color: white;
+  padding: 2px 6px 3px;
+}
+
+.badge {
+  background-color: #6a7176;
+  color: white;
+  padding: 2px 6px 3px;
+}
+
+a.additional-link {
+  text-decoration: none;
+  margin-right: 10px;
 }
