--- a/app/assets/stylesheets/active_admin.scss
+++ b/app/assets/stylesheets/active_admin.scss
@@ -50,3 +50,43 @@ a.additional-link {
   text-decoration: none;
   margin-right: 10px;
 }
+
+.numeric-list {
+  list-style: decimal;
+  padding: 0;
+
+  h4 {
+    margin: 10px 0;
+  }
+
+  li:first-child h4 {
+    margin-top: 0;
+  }
+}
+
+.profile-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap: 20px 10px;
+
+  div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    img {
+      width: 80px;
+      height: 80px;
+      border-radius: 50%;
+    }
+
+    h4 {
+      margin: 10px 0 5px;
+    }
+
+    p {
+      text-align: center;
+      margin: 0;
+    }
+  }
+}
