--- a/app/views/admin/pages/_components.html.erb
+++ b/app/views/admin/pages/_components.html.erb
@@ -7,7 +7,9 @@
         <table>
           <tr>
             <td>Header</td>
-            <td><%= item['props']['header'].html_safe %></td>
+            <td>
+              <%= item['props']['header'].html_safe %>
+            </td>
           </tr>
           <tr>
             <td>Background Image</td>
